have both C++ an Python versions

--- a/data/tutorials/roofit/roofit_basics.ipynb
+++ b/data/tutorials/roofit/roofit_basics.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "`RooFit` is a OO analysis environment built on `ROOT`. It has a collection of classes designed to augment root for data modeling.\n",
     "\n",
-    "This section covers a few of the basics of RooFit. There are many more tutorials available at this link: https://root.cern.ch/root/html600/tutorials/roofit/index.html"
+    "This section covers a few of the basics of RooFit, using the Python bindings for the C++ classes (pyroot). There are many more tutorials available at this link: https://root.cern.ch/root/html600/tutorials/roofit/index.html"
    ]
   },
   {
